Fix bug in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ classifiers = [
     "Environment :: Web Environment",
     "Topic :: Utilities"
 ]
+dependencies = [
+    "requests",
+]
 
 [project.urls]
 homepage = "https://github.com/outini/python-powerdns"
@@ -34,11 +37,6 @@ repository = "https://github.com/outini/python-powerdns"
 
 [project.scripts]
 pdns-create-zone = "bin/pdns-create-zone"
-
-[project.dependencies]
-dependencies = [
-    "requests"
-]
 
 [tool.hatch.version]
 path = "powerdns/__init__.py"
