--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ test_python_powerdns:
     - python --version
     - pip --version
   script:
+    - pip install --upgrade pip
     - pip install -r requirements.txt
     # Install pyfsense_client in editable mode
     - pip install -e .
