--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,9 @@ test_python_powerdns:
     - pip install -r requirements.txt
     # Install pyfsense_client in editable mode
     - pip install -e .
-    # Run all tests
-    - python -m unittest tests
+    # Discover all tests inside the test folder
+    - python -m unittest discover -s tests
+
 
 
 build_and_publish:
