--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,11 +15,11 @@ test_python_powerdns:
     - pip --version
   script:
     - pip install --upgrade pip
-    - pip install -r requirements.txt
-    # Install pyfsense_client in editable mode
+    - pip install -r requirements_test.txt
+    # Install python-powerdns in editable mode
     - pip install -e .
     # Discover all tests inside the test folder
-    - python -m unittest discover -s tests
+    - coverage run -m unittest discover
 
 
 
