--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - test
   - build
+  - sync
 
 test_python_powerdns:
   stage: test
@@ -68,3 +69,38 @@ build_and_publish:
     - pip install hatch
     - hatch build
     - hatch publish --repo $PYPI_REPO_URL --user $PYPI_REPO_USER --auth $PYPI_REPO_AUTH
+
+
+# Push a public copy of this repo up to GitHub
+sync_public_repo:
+  stage: sync
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache git openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$GITHUB_SSH_PUSH_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan github.com >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+    - git config --global user.email "devinbarry@users.noreply.github.com"
+    - git config --global user.name "Devin Barry"
+  script:
+    - git clone --single-branch --branch master $CI_REPOSITORY_URL private_repo
+    - cd private_repo
+    - git remote add public $GITHUB_PYTHON_POWERDNS_REPO_URL
+    - git fetch public
+    - git checkout -b temp_branch master
+    - git filter-branch --prune-empty --tree-filter '
+        if [ -e .gitattributes ]; then
+          while IFS= read -r line || [[ -n "$line" ]]; do
+            if [[ $line == *"export-ignore"* ]]; then
+              file=$(echo "$line" | cut -d" " -f1)
+              rm -rf "$file"
+            fi
+          done < .gitattributes
+        fi
+      ' --tag-name-filter cat -- temp_branch
+    - git push -f public temp_branch:master
+  only:
+    - master
